5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4060/executions/1760_2390.log
== TEST (2019-05-29 16:28:03) 
-- CODE:
prensentes=array(eval(input("presentes: ")))
faltantes=array(eval(input("faltantes: ")))

pre_menos_fal=prensentes-faltantes
print(pre_menos_fal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    prensentes=array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:29:40) 
-- CODE:
presentes=array(eval(input("presentes: ")))
faltantes=array(eval(input("faltantes: ")))

pre_menos_fal=presentes-faltantes
print(pre_menos_fal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    presentes=array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:30:10) 
-- CODE:
from numpy import*
presentes=array(eval(input("presentes: ")))
faltantes=array(eval(input("faltantes: ")))

pre_menos_fal=presentes-faltantes
print(pre_menos_fal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:35:55) 
-- CODE:
from numpy import*
presentes=array(eval(input("presentes: ")))
faltantes=array(eval(input("faltantes: ")))
pre_menos_fal=presentes-faltantes
cont=0
crescente=arange(size(presentes))


print(crescente)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:44:59) 
-- CODE:
from numpy import*
presentes=array(eval(input("presentes: ")))
faltantes=array(eval(input("faltantes: ")))
pre_menos_fal=presentes-faltantes
cont=0
i=0
crescente=arange(size(presentes))
while(cont!=max(pre_menos_fal)):
	i=i+1
	
print(crescente[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:45:29) 
-- CODE:
from numpy import*
presentes=array(eval(input("presentes: ")))
faltantes=array(eval(input("faltantes: ")))
pre_menos_fal=presentes-faltantes
cont=0
i=0
crescente=arange(size(presentes))
while(cont!=max(pre_menos_fal)):
	i=i+1
	
print(crescente)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:45:42) 
-- CODE:
from numpy import*
presentes=array(eval(input("presentes: ")))
faltantes=array(eval(input("faltantes: ")))
pre_menos_fal=presentes-faltantes
cont=0
i=0
crescente=arange(size(presentes))
while(cont!=max(pre_menos_fal)):
	i=i+1
	
print(crescente)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:46:11) 
-- CODE:
from numpy import*
presentes=array(eval(input("presentes: ")))
faltantes=array(eval(input("faltantes: ")))
pre_menos_fal=presentes-faltantes
cont=0
i=0
crescente=arange(size(presentes))
while(cont!=max(pre_menos_fal)):
	i=i+1
	
print(crescente)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:47:52) 
-- CODE:
from numpy import*
presentes=array(eval(input("presentes: ")))
faltantes=array(eval(input("faltantes: ")))
pre_menos_fal=presentes-faltantes
cont=0
i=0
crescente=arange(size(presentes))
while(cont!=max(pre_menos_fal)):
	i=i+1
	
print(size(presentes))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:48:44) 
-- CODE:
from numpy import*
presentes=array(eval(input("presentes: ")))
faltantes=array(eval(input("faltantes: ")))
pre_menos_fal=presentes-faltantes
cont=0
i=0
crescente=arange(size(presentes))
while(cont!=max(pre_menos_fal)):
	i=i+1
	
print(crescente)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:50:46) 
-- CODE:
from numpy import*
presentes=array(eval(input("presentes: ")))
faltantes=array(eval(input("faltantes: ")))
pre_menos_fal=presentes-faltantes
cont=0
i=0
crescente=arange(size(presentes))
while(cont!=max(pre_menos_fal)):
	i=i+1
	
print(crescente[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:51:12) 
-- CODE:
from numpy import*
presentes=array(eval(input("presentes: ")))
faltantes=array(eval(input("faltantes: ")))
pre_menos_fal=presentes-faltantes
cont=0
i=0
crescente=arange(size(presentes))
while(cont!=max(pre_menos_fal)):
	i=i+1
	
print(crescente[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:52:16) 
-- CODE:
from numpy import*
presentes=array(eval(input("presentes: ")))
faltantes=array(eval(input("faltantes: ")))
pre_menos_fal=presentes-faltantes
cont=0
i=0
crescente=arange(size(presentes))
while(cont!=max(pre_menos_fal)):
	i=i+1
	
print(crescente[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:53:10) 
-- CODE:
from numpy import*
presentes=array(eval(input("presentes: ")))
faltantes=array(eval(input("faltantes: ")))
pre_menos_fal=presentes-faltantes
cont=0
i=0
crescente=arange(size(presentes))
while(cont!=max(pre_menos_fal)):
	i=i+1
	
print(crescente[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:54:35) 
-- CODE:
from numpy import*
presentes=array(eval(input("presentes: ")))
faltantes=array(eval(input("faltantes: ")))
pre_menos_fal=presentes-faltantes
cont=0
i=0
crescente=arange(size(presentes))
while(cont!=max(pre_menos_fal)):
	i=i+1
	cont=cont+1
print(crescente[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:55:45) 
-- CODE:
from numpy import*
presentes=array(eval(input("presentes: ")))
faltantes=array(eval(input("faltantes: ")))
pre_menos_fal=presentes-faltantes
cont=0
i=0
crescente=arange(size(presentes))

while(cont!=max(pre_menos_fal)):
	i=i+1
	cont=cont+1
print(crescente[2])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:56:54) 
-- CODE:
from numpy import*
presentes=array(eval(input("presentes: ")))
faltantes=array(eval(input("faltantes: ")))
pre_menos_fal=presentes-faltantes
cont=0
i=0
crescente=arange(size(presentes))

while(cont!=max(pre_menos_fal)):
	i=i+1
	cont=cont+1
print(crescente)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:58:27) 
-- CODE:
from numpy import*
presentes=array(eval(input("presentes: ")))
faltantes=array(eval(input("faltantes: ")))
pre_menos_fal=presentes-faltantes
cont=0
i=0
crescente=arange(size(presentes))

while(cont!=max(pre_menos_fal)):
	i=i+1
	cont=cont+1
print(pre_menos_fal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 17:06:11) 
-- CODE:
from numpy import*
presentes=array(eval(input("presentes: ")))
faltantes=array(eval(input("faltantes: ")))
pre_menos_fal=presentes-faltantes
cont=0
i=0
crescente=arange(size(presentes))
while(cont!=max(pre_menos_fal)):
	i=i+1
	
	
print(crescente[i])
-- EXECUTION TIME:
1453.52
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:

-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 17:06:11) 
-- CODE:
from numpy import*
presentes=array(eval(input("presentes: ")))
faltantes=array(eval(input("faltantes: ")))
pre_menos_fal=presentes-faltantes
cont=0
i=0
crescente=arange(size(presentes))
while(cont!=max(pre_menos_fal)):
	i=i+1
	
print(crescente[i])
-- EXECUTION TIME:
1259.08
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:

-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 17:06:11) 
-- CODE:
from numpy import*
presentes=array(eval(input("presentes: ")))
faltantes=array(eval(input("faltantes: ")))
pre_menos_fal=presentes-faltantes
cont=0
i=0
crescente=arange(size(presentes))
while(cont!=max(pre_menos_fal)):
	i=i+1
	
	
print(crescente[i])
-- EXECUTION TIME:
1464.66
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:

-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 17:06:11) 
-- CODE:
from numpy import*
presentes=array(eval(input("presentes: ")))
faltantes=array(eval(input("faltantes: ")))
pre_menos_fal=presentes-faltantes
cont=0
i=0
crescente=arange(size(presentes))
while(cont!=max(pre_menos_fal)):
	i=i+1
	
	
print(crescente[i])
-- EXECUTION TIME:
1459.72
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:

-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 17:06:11) 
-- CODE:
from numpy import*
presentes=array(eval(input("presentes: ")))
faltantes=array(eval(input("faltantes: ")))
pre_menos_fal=presentes-faltantes
cont=0
i=0
crescente=arange(size(presentes))
while(cont!=max(pre_menos_fal)):
	i=i+1
	
	
print(crescente[i])
-- EXECUTION TIME:
1453.86
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:

-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 17:06:11) 
-- CODE:
from numpy import*
presentes=array(eval(input("presentes: ")))
faltantes=array(eval(input("faltantes: ")))
pre_menos_fal=presentes-faltantes
cont=0
i=0
crescente=arange(size(presentes))
while(cont!=max(pre_menos_fal)):
	i=i+1
	
	
print(crescente[i])
-- EXECUTION TIME:
1453.56
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:

-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 17:06:12) 
-- CODE:
from numpy import*
presentes=array(eval(input("presentes: ")))
faltantes=array(eval(input("faltantes: ")))
pre_menos_fal=presentes-faltantes
cont=0
i=0
crescente=arange(size(presentes))
while(cont!=max(pre_menos_fal)):
	i=i+1
	
	
print(crescente[i])
-- EXECUTION TIME:
1453.38
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:

-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
